# webscrapy_airlines

./: .env-example  README.md  docker-compose.yml  pyproject.toml
src/: __main__.py  app.py  generic_crawler.py  main_script.py  streamlit_app.py
src/crawler/: abstract_crawler.py
src/tools/: browser_provider.py  mongo_connector.py  mongodb.py  redis.py  redis_client.py
src/tools/steps/: actions.py
steps_scripts/: latam.json
