[tool.poetry]
name = "webscrapy-airlines"
version = "0.1.0"
description = ""
authors = ["Rafael Panegassi <rm.panegassi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.2.1"
flake8 = "^7.1.2"
isort = "^6.0.1"
pymongo = "^4.11.3"
loguru = "^0.7.3"
selenium = "^4.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
